# fmjpeg2koj

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  build-osx.sh  build.bat  build.sh  dcmcjp2k.cc  dcmdjp2k.cc  djcodecd.cc  djcodecd.h  djcodece.cc  djcodece.h  djcparam.cc  djcparam.h  djdecode.cc  djdecode.h  djencode.cc  djencode.h  djlsutil.h  djrparam.cc  djrparam.h  djutils.cc  dldefine.h  memory_file.cpp  memory_file.h
.github/workflows/: cmake.yml
cmake/: fmjpeg2kConfig.cmake  fmjpeg2kConfig.cmake.in
include/: djencode.h  djerror.h
include/fmjpeg2k/: djcodecd.h  djdecode.h  djencode.h  djrparam.h  memory_file.h
